fixed untracked files

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 16 09:32:33 COT 2020
-sdk.dir=C\:\\Users\\Bor_W\\AppData\\Local\\Android\\Sdk
+#Fri Jan 17 18:53:07 COT 2020
+sdk.dir=C\:\\Users\\jeeps\\AppData\\Local\\Android\\Sdk
