--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
     testImplementation("com.squareup.okhttp3:mockwebserver:4.3.1")
+    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
 }
