--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 
     implementation 'com.github.kizitonwose:CalendarView:0.3.1'
     // Butter knife
