--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,17 +45,17 @@
         </activity>
 
         <receiver
-            android:name=".repository.geofence.GeofenceBroadcastReceiver"
+            android:name=".services.geofence.GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
 
         <service
-            android:name=".repository.geofence.GeofenceTransitionsJobIntentService"
+            android:name=".services.geofence.GeofenceTransitionsJobIntentService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
         <receiver
-            android:name=".repository.alarmmanager.AlarmBroadcastReceiver"
+            android:name=".services.alarmmanager.AlarmBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
     </application>
