--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // Firebase (https://firebase.google.com/docs/cloud-messaging/android/client?authuser=0)
+    implementation 'com.google.firebase:firebase-messaging:20.1.5'                                  // Firebase Cloud Messaging
 }
