--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
 
 
     <application
+        android:name=".App"
         android:allowBackup="false"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
