--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
 
 dependencies {
     def room_version = "2.2.3"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
@@ -37,14 +38,17 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-
+    implementation 'com.google.code.gson:gson:2.8.1'
     implementation 'com.github.kizitonwose:CalendarView:0.3.1'
+
     // Butter knife
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
+
     //Retrofit library
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+
 
     testImplementation("com.squareup.okhttp3:mockwebserver:4.3.1")
     testImplementation 'junit:junit:4.12'
