--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,24 +29,29 @@ dependencies {
     def play_services_version = "17.0.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
     implementation 'com.google.android.material:material:1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.0.0'
-    implementation 'androidx.navigation:navigation-ui:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+
     implementation "com.google.android.gms:play-services-location:$play_services_version"
     implementation "com.google.android.gms:play-services-maps:$play_services_version"
     implementation "com.google.android.gms:play-services-places:$play_services_version"
-    implementation 'androidx.cardview:cardview:1.0.0'
+
     implementation 'com.google.code.gson:gson:2.8.1'
     implementation 'com.github.kizitonwose:CalendarView:0.3.1'
 
-    // Butter knife
+    /** Android X */
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.navigation:navigation-fragment:2.0.0'
+    implementation 'androidx.navigation:navigation-ui:2.0.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    /** Butter knife */
     implementation 'com.jakewharton:butterknife:10.2.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.1'
 
-    //Retrofit library
+    /** Retrofit library */
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
 
@@ -56,11 +61,11 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-    // Firebase (https://firebase.google.com/docs/cloud-messaging/android/client?authuser=0)
+    /** Firebase (https://firebase.google.com/docs/cloud-messaging/android/client?authuser=0) */
     implementation 'com.google.firebase:firebase-messaging:20.1.5'                                  // Firebase Cloud Messaging
 
 
-    // ROOM
+    /** ROOM */
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
