--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,13 +28,15 @@ android {
 }
 
 dependencies {
-    def room_version = "2.2.3"
-    def play_services_version = "17.0.0"
+
+
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.google.android.material:material:1.2.0-alpha04'
 
+    /** Play services */
+    def play_services_version = "17.0.0"
     implementation "com.google.android.gms:play-services-location:$play_services_version"
     implementation "com.google.android.gms:play-services-maps:$play_services_version"
     implementation "com.google.android.gms:play-services-places:$play_services_version"
@@ -69,10 +71,28 @@ dependencies {
 
 
     /** ROOM */
+    def room_version = "2.2.3"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
     // optional - RxJava support for Room
     implementation "androidx.room:room-rxjava2:$room_version"
+
+    /** Workmanager */
+    def work_version = "2.3.1"
+    // (Java only)
+    implementation "androidx.work:work-runtime:$work_version"
+
+    // Kotlin + coroutines
+    // implementation "androidx.work:work-runtime-ktx:$work_version"
+
+    // optional - RxJava2 support
+    implementation "androidx.work:work-rxjava2:$work_version"
+
+    // optional - GCMNetworkManager support
+    // implementation "androidx.work:work-gcm:$work_version"
+
+    // optional - Test helpers
+    // androidTestImplementation "androidx.work:work-testing:$work_version"
 
 }
