--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
             android:exported="true" />
 
         <service
-            android:name="com.apptec.registrateapp.repository.webServices.MyFirebaseMessagingService"
+            android:name="com.apptec.registrateapp.repository.webservices.MyFirebaseMessagingService"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
