--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,12 +44,12 @@
         </activity>
 
         <receiver
-            android:name="com.apptec.registrateapp.repository.geofence.GeofenceBroadcastReceiver"
+            android:name="com.apptec.registrateapp.mainactivity.fhome.geofence.GeofenceBroadcastReceiver"
             android:enabled="true"
             android:exported="true" />
 
         <service
-            android:name="com.apptec.registrateapp.repository.geofence.GeofenceTransitionsJobIntentService"
+            android:name="com.apptec.registrateapp.mainactivity.fhome.geofence.GeofenceTransitionsJobIntentService"
             android:exported="true"
             android:permission="android.permission.BIND_JOB_SERVICE" />
 
