--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,12 @@ android {
         versionCode 8
         versionName "2.1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = ["room.schemaLocation":
+                                     "$projectDir/schemas".toString()]
+            }
+        }
     }
     dataBinding {
         enabled = true
