--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ android {
 
 dependencies {
 
-
+    def version_lifecycle = "2.2.0"
+    def arch_version = "2.1.0"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
@@ -56,9 +57,14 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.navigation:navigation-ui:2.0.0'
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    // ViewModel and lifecycle support for java
+    implementation "androidx.lifecycle:lifecycle-viewmodel:${version_lifecycle}"
+    implementation "androidx.lifecycle:lifecycle-livedata:${version_lifecycle}"
+
 
     /** Butter knife */
     implementation 'com.jakewharton:butterknife:10.2.1'
