--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext {
+        version_kotlin = "1.3.72"
+        version_constraint_layout = "1.1.3"
+        version_lifecycle = "2.2.0"
+        version_navigation = '1.0.0-beta02'
+        version_material = '1.1.0-beta02'
+        version_room = "2.2.3"
+        version_work_manager = "2.3.1"
+        version_retrofit = "2.4.0"
+        version_play_services = "17.0.0"
+        version_timber = '4.7.1'
+    }
+
     repositories {
         google()
         jcenter()
@@ -12,7 +24,9 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.0'
         classpath 'com.google.gms:google-services:4.3.3'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$version_kotlin"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
