--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0-alpha03'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.constraintlayout:constraintlayout:$version_constraint_layout"
 
     // ViewModel and lifecycle support for java
     implementation "androidx.lifecycle:lifecycle-viewmodel:${version_lifecycle}"
@@ -107,7 +107,7 @@ dependencies {
 
     // optional - RxJava2 support
     implementation "androidx.work:work-rxjava2:$version_work_manager"
-    implementation "androidx.core:core-ktx:+"
+    implementation 'androidx.core:core-ktx:1.5.0-alpha01'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.1.0"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$version_kotlin"
 
