--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         version_kotlin = "1.3.72"
-        version_constraint_layout = "1.1.3"
+        version_constraint_layout = "2.0.0-beta1"
         version_lifecycle = "2.2.0"
         version_navigation = '1.0.0-beta02'
         version_material = '1.1.0-beta02'
