--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,7 @@
             android:exported="true" />
 
         <service
-            android:name="com.apptec.registrateapp.mainactivity.fnotification.FMC"
+            android:name="com.apptec.registrateapp.mainactivity.fnotification.FMS"
             android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
