--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         version_constraint_layout = "2.0.0-beta3"
         version_lifecycle = "2.2.0"
         version_navigation = '1.0.0-beta02'
-        version_material = '1.2.0-alpha04'
+        version_material = '1.1.0-beta02'
         version_room = "2.2.3"
         version_work_manager = "2.3.1"
         version_retrofit = "2.4.0"
