--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,12 @@ android {
         minSdkVersion 23
         targetSdkVersion 29
 
-        // Version code
+        // Version code (It will appear like: 41010)
         versionCode versionMajor * 10000
         + versionMinor * 100
         + versionPatch
 
-        // Version name
+        // Version name (It will appear like: 4.1.1)
         versionName "${versionMajor}.${versionMinor}.${versionPatch}"
 
 
