--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:name="com.apptec.camello.App"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_launcher_camello"
         android:label="@string/app_name"
         android:resizeableActivity="false"
         android:supportsRtl="true"
@@ -35,7 +35,7 @@
         -->
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@drawable/ic_launcher" />
+            android:resource="@drawable/ic_launcher_camello" />
 
         <!--
             Set color used with incoming notification messages.
