--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
 
     // Version code
     def versionMajor = 4
-    def versionMinor = 3
-    def versionPatch = 1
+    def versionMinor = 4
+    def versionPatch = 0
 
 
     compileSdkVersion 29
@@ -94,6 +94,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-fragment:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    /** Security for file access */
+    implementation "androidx.security:security-crypto:$version_security_library"
 
     // ViewModel and lifecycle support for java
     implementation "androidx.lifecycle:lifecycle-viewmodel:$version_lifecycle"
