--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
     <application
         android:name="com.apptec.camello.App"
         android:allowBackup="false"
-        android:icon="@mipmap/ic_launcher_camello"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:label="@string/app_name"
         android:resizeableActivity="false"
         android:supportsRtl="true"
